--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.DailyNews" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.DailyNews" parent="Theme.Material3.DayNight">
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
+        <item name="actionBarStyle">@style/CustomDarkActionBar</item>
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    </style>
+
+    <style name="CustomDarkActionBar" parent="@style/Widget.AppCompat.ActionBar.Solid">
+        <item name="background" type="color">@color/my_dark_primary</item>
+        <item name="titleTextStyle">@style/CustomActionBarTitle</item>
     </style>
 </resources>
